# kursova_robota2025

./: CMakeLists.txt  Database.cpp  Database.h  DesktopNotification.cpp  DesktopNotification.h  MForm.qml  Main.qml  NotificationHelper.java  NotificationManager.cpp  NotificationManager.h  diary.db  main.cpp  resurs.qrc
